# aeroai

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_VERCEL.md  SECURITY.md  STYLE_GUIDE.md  deploy.sh  env.example  pyproject.toml  requirements.txt  vercel.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yml  feature-request.yaml
api/: main.py  oumi_lite.py  simple_main.py
configs/: README.md
configs/apis/anthropic/: eval_claude_3_5_sonnet.yaml  eval_claude_3_7_sonnet.yaml  infer_claude_3_5_sonnet.yaml  infer_claude_3_7_sonnet.yaml  infer_claude_opus_4_1.yaml
configs/apis/gemini/: eval_gemini_1_5_pro.yaml  infer_gemini_1_5_pro.yaml  infer_gemini_2_5_pro.yaml
configs/apis/openai/: eval_gpt_4o.yaml  eval_gpt_o1_preview.yaml  infer_chatgpt_4o_latest.yaml  infer_gpt_4_1.yaml  infer_gpt_4_1_mini.yaml  infer_gpt_4o.yaml  infer_gpt_4o_mini.yaml  infer_gpt_5.yaml  infer_gpt_5_chat_latest.yaml  infer_gpt_5_mini.yaml  infer_gpt_5_nano.yaml  infer_gpt_o1_preview.yaml  infer_o1.yaml  infer_o1_mini.yaml  infer_o3_mini.yaml
configs/apis/vertex/: eval_llama_3_1_405b.yaml  eval_llama_3_3_70b.yaml  infer_llama_3_1_405b.yaml  infer_llama_3_3_70b.yaml
configs/examples/: README.md
configs/examples/bulk_inference/: README.md  gcp_job.yaml
configs/examples/deepspeed/: README.md  llama3_1_8b_deepspeed_z2_train.yaml  llama3_1_8b_deepspeed_z3_offload_train.yaml  llama3_1_8b_deepspeed_z3_train.yaml
configs/examples/fineweb_ablation_pretraining/: README.md
configs/examples/grpo_tldr/: gcp_job.yaml  train.yaml
configs/examples/grpo_verl_countdown/: gcp_job.yaml  slurm_job.yaml  train.yaml
configs/examples/grpo_verl_geometry3k/: gcp_job.yaml  train.yaml
configs/examples/grpo_verl_gsm8k/: slurm_job.yaml  train.yaml
configs/examples/macos_gguf/: README.md
configs/examples/misc/: README.md  dev_gcp_job.yaml  hello_world_gcp_job.yaml  hello_world_polaris_job.yaml  sky_init.sh  slurm_init.sh  slurm_ray_init.sh  tulu3_sft_mini.yaml  vllm_polaris_job.yaml
configs/examples/quantization/: README.md  awq_quantization_config.yaml  bnb_quantization_config.yaml
configs/examples/synthesis/: README.md  conversation_synth.yaml  data_augmentation_synth.yaml  domain_qa_synth.yaml  instruction_following_synth.yaml  question_answer_synth.yaml
configs/projects/: README.md
configs/projects/aya/: README.md
configs/projects/chatqa/: README.md  chatqa_stage1_train.yaml  chatqa_stage2_train.yaml  gcp_job.yaml
configs/projects/coalm/: 405b_train.yaml  70b_infer.yaml  70b_train.yaml  8b_infer.yaml  8b_train.yaml  README.md
configs/projects/dcvlr/: README.md  run_image_synthesis.py  synthesize_images_vllm.py
configs/projects/halloumi/: 8b_train.yaml  README.md  gcp_job.yaml  halloumi_classifier_inference_notebook.ipynb  halloumi_eval_notebook.ipynb  halloumi_inference_notebook.ipynb
configs/projects/limo/: qwen2.5_7b_fft.yaml  qwen2.5_7b_fft_yarn.yaml  qwen2.5_7b_fft_yarn_deepspeed.yaml  qwen2.5_7b_fft_yarn_deepspeed_memory_optimized_train.yaml
configs/projects/wc50m/: README.md
configs/recipes/: README.md
configs/recipes/deepseek_r1/: README.md
configs/recipes/falcon_e/: README.md
configs/recipes/falcon_h1/: README.md
configs/recipes/gpt2/: README.md
configs/recipes/gpt_oss/: README.md
configs/recipes/llama3_1/: README.md
data/dataset_examples/: README.md  alpaca_format.json  alpaca_format.jsonl  oumi_format.json  oumi_format.jsonl  vision_language_dpo_format.jsonl  vision_language_oumi_format.jsonl
docs/: .gitignore  _docsummaries.sh  _manage_doclinks.py  _summarize_module.py  citations.bib  conf.py  index.md
docs/about/: acknowledgements.md  changelog.md  citations.md  license.md
docs/cli/: commands.md
docs/development/: code_of_conduct.md  dev_setup.md  docs_guide.md  style_guide.md
docs/faq/: oom.md  troubleshooting.md
docs/get_started/: core_concepts.md  installation.md  quickstart.md  tutorials.md
docs/resources/: recipes.md
docs/user_guides/: customization.md  quantization.md  synth.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
notebooks/: Oumi - A Tour.ipynb  Oumi - Build your own Custom Evaluation (Hallucination Classifier).ipynb  Oumi - Bulk Inference of LLM APIs.ipynb  Oumi - Deploying a Job.ipynb  Oumi - Distill a Large Model.ipynb  Oumi - Evaluation with AlpacaEval 2.0.ipynb  Oumi - Evaluation with MT Bench.ipynb  Oumi - Evaluation with Oumi.ipynb  Oumi - Finetuning Tutorial.ipynb  Oumi - Launching Jobs on Custom Clusters.ipynb  Oumi - MiniMath-R1-1.5B.ipynb  Oumi - Quantization Tutorial.ipynb  Oumi - Running Jobs Remotely.ipynb  Oumi - Simple Judge.ipynb  Oumi - Train a Letter Counting Model using GRPO.ipynb  Oumi - Training CNN on Custom Dataset.ipynb  Oumi - Using NanoGPT.ipynb  Oumi - Using vLLM Engine for Inference.ipynb  Oumi - Vision Language Models.ipynb
scripts/: .gitignore  demo.py  llama_e2e.py  memcalc.py
scripts/benchmarks/: benchmark_dataloader.py  benchmark_nccl.py  benchmark_trainers.sh  minimal_fsdp_training.py  minimal_multimodal_training.py
scripts/datasets/: save_conversations.py
scripts/docker/: build_docker.sh
scripts/frontier/: README.md  frontier_init.sh  launcher.sh
scripts/inference/: README.md  gcp_inference.py
scripts/perlmutter/: README.md  launcher.sh  perlmutter_init.sh
scripts/polaris/: README.md  launcher.sh  polaris_init.sh
src/experimental/: __init__.py
src/oumi/: __init__.py  __main__.py  evaluate.py  evaluate_async.py  infer.py  judge.py  synth.py  train.py
tests/: __init__.py  conftest.py  markers.py
tests/e2e/: __init__.py  sambanova_infer_tutorial.yaml  test_eval_e2e.py  test_notebooks.py  test_sambanova_inference.py  test_simple_judge.py  test_train_e2e.py
tests/scripts/: e2e_tests_job.yaml  launch_tests.sh  predownload_for_github_gpu_tests.sh  runpod_e2e_tests_job.yaml
tests/testdata/: adapter_config.json
tests/unit/: conftest.py  test_apache_license_header.py  test_train.py
(+937 files in other folders)
